--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adir's first web page</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <table>
         <tr class="img-text-adir">
             <td>
-                <img src="/images/151046565_456094328769440_2167188952583456319_n.jpg" alt="Picture of Adir">
+                <img src="images/151046565_456094328769440_2167188952583456319_n.jpg" alt="Picture of Adir">
             </td>
             <td>
                 <h1><strong>Adir Bitton, 23</strong></h1>
@@ -31,7 +31,7 @@
     </strong></em> Currently also. In the past i used to live at <em><strong>Netanya</strong></em>, and <em><strong>Ashqelon.   
     </strong></em></p>
     <hr>
-    <p><a href="/Contact.html">Clicl Here For My Contact Details</a></p>
+    <p><a href="Contact.html">Clicl Here For My Contact Details</a></p>
     <hr>
     <h2>My Hobbies</h2>
     <p>
