--- a/Contact.html
+++ b/Contact.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adir'Cantact Details</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <table>
         <tr class="img-text-adir">
             <td>
-                <img src="/images/151046565_456094328769440_2167188952583456319_n.jpg" alt="Picture of Adir">
+                <img src="images/151046565_456094328769440_2167188952583456319_n.jpg" alt="Picture of Adir">
             </td>
             <td>
                 <h1><strong>Adir Bitton, 23</strong></h1>
@@ -68,7 +68,7 @@
         <input type="submit">
     </form>
     <hr>
-    <h2><a href="/index.html">Go Back to Home page</a></h2>
+    <h2><a href="index.html">Go Back to Home page</a></h2>
 </body>
 
 </html>
