--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td>Grapic Design (Adobe, C4D)</td>
+            <td>Graphic Design (Adobe, C4D)</td>
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
